-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 270303) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??042003 (v2.2.3)  -** stable release **-
	- added: support for both -0.64 and 0.65- JACK versions; 
		 transport functionality is only enabled with the 
		 newer versions
	- changed: by default python version of ECI is used; the C 
		   python module for ECI, pyecasound, is only compiled
		   if --enable-pyecasound is specified
	- fixed: yet another fix for creating temporary files in
                 ecanormalize and ecafixdc; now both LOGNAME and USER
		 are checked for a valid user name
	- fixed: prefer usleep over nanosleep on cygwin; avoids 
		 the excessive-cpu-usage problem
18032003 (v2.2.2)  -** stable release **-
	- edi-entries: edi-35 and edi-36 added
	- added: ecacontrol.py - a native python implementation of 
		 the ECI API [jhalttun]
	- added: stream ogg/mp3/mid directly from network if the 
	         filename has a url-prefix
	- added: author name to the description of LADSPA plugins
	- added: latest config.guess and config.sub added to 
	         the dist package
	- added: ecamonitor - a warning is printed if you try to 
		 run with python-1.x; python-2.x is required
	- added: new tutorials page added to documentation; 
		 see Documentation/index.html
	- changed: ecasound.el updated to 0.8.2, lots of small
		   changes, see ecasound.el for details [mlang]